# old-vc-benchmarks

./: CMakeLists.txt  arithmetics.cpp  arithmetics2.cpp  autoflops.cpp  benchmark-all.sh  benchmark.cpp  benchmark.h  compare.cpp  constants.cpp  cpuset.h  dhryrock.cpp  flops.cpp  gather.cpp  interleavedmemorywrapper.cpp  mandel.cpp  mandel.h  mandelbrot.cpp  mask.cpp  math.cpp  memio.cpp  plot.rb  random.h  rtwrapper.cpp  scatter.cpp  sort.cpp  tsc.h  whetrock.cpp
cmake/: FindVc.cmake
